# ComfyUI-HY-Motion

./: pyproject.toml  requirements.txt
hymotion/network/: hymotion_mmdit.py
hymotion/network/text_encoders/: text_encoder.py
hymotion/pipeline/: body_model.py  motion_diffusion.py
hymotion/prompt_engineering/: prompt_rewrite.py
hymotion/utils/: geometry.py  path.py  smplh2woodfbx.py  t2m_runtime.py  visualize_mesh_web.py
